# BeeWork

./: CMakeCache.txt  CMakeLists.txt  README.md
.cache/clangd/index/: aabb2d.c.81567F1B41C9BAAD.idx  aabb2d.h.6A33131993B22721.idx  aabb2d.h.71B421537B3BC171.idx  affine-mat.h.FD6462ECBBB7653C.idx  affine-post.h.2CE12D0999A940D2.idx  affine-pre.h.6AAAC9BE33E29BA1.idx  affine.c.640D085F190562B2.idx  affine.h.692EE12BBD66C2CD.idx  affine.h.8F806953E80F3A77.idx  affine.h.B58D76CBFED2B434.idx  affine2d-post.h.D1FB29E9A367F9FE.idx  affine2d.c.EF76227BC77B0DFB.idx  affine2d.h.3793583627F4A5FC.idx  affine2d.h.426C69A12DC12C66.idx  bezier.c.D4948380BF5F038C.idx  bezier.h.25806ED6092B1056.idx  bezier.h.4E2FB12805402A7C.idx  box.c.FA3F372BEA784F89.idx  box.h.6327606D91D70BB1.idx  box.h.B136B12D1F8A8926.idx  call.h.45A2070A4177B351.idx  cam.c.30506CD90F7FD9EE.idx  cam.h.E8DADB9955DAB5D0.idx  cam.h.FC825AB3A05BE5CB.idx  camera.h.6DD9ADD92E55122C.idx  cglm.h.853842A3CF18D80F.idx  color.h.8F1F82119F6C34DF.idx  common.h.B15FFF2D5A4E7B83.idx  curve.c.EE8159043283DC99.idx  curve.h.986E1C0388E96CAE.idx  curve.h.F1EA217BB4582E8D.idx  ease.c.71FA7F8086D5717C.idx  ease.h.756CEFE4B6209B4B.idx  ease.h.C4475667CCEC5D3B.idx  euler.c.BB12011FA3C72581.idx  euler.h.AD574BDEE6CF259D.idx  euler.h.CEDB54131EF4BEB9.idx  euler_to_quat_rh.h.24538FE2BAC9E2B1.idx  frustum.c.99B6E13959C96B30.idx  frustum.h.053D62AD99F9DFDF.idx  (+133 more)
examples/: main.c
libs/cglm/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cglmConfig.cmake  cmake_install.cmake
libs/glad/: glad.c  glad.h
utils/: camera.h  general.h  renderer.h  shader.h  texture.h  window.h
utils/deprecated/: window.h
utils/temp/: renderer.c
